--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
 		"@types/react-dom": "^17.0.9",
 		"@types/react-router": "^5.1.16",
 		"@types/react-router-dom": "^5.3.0",
+		"@types/uuid": "^8.3.1",
 		"@typescript-eslint/eslint-plugin": "^4.0.1",
 		"@typescript-eslint/parser": "^4.0.1",
 		"@vercel/webpack-asset-relocator-loader": "1.7.0",
@@ -100,6 +101,7 @@
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-router": "^5.2.1",
-		"react-router-dom": "^5.3.0"
+		"react-router-dom": "^5.3.0",
+		"uuid": "^8.3.2"
 	}
 }
