--- a/package.json
+++ b/package.json
@@ -91,8 +91,11 @@
 		"typescript": "^4.0.2"
 	},
 	"dependencies": {
-		"@material-ui/core": "^4.12.3",
-		"@material-ui/icons": "^4.11.2",
+		"@emotion/react": "^11.5.0",
+		"@emotion/styled": "^11.3.0",
+		"@mui/icons-material": "^5.0.5",
+		"@mui/material": "^5.0.6",
+		"@mui/styles": "^5.0.2",
 		"classnames": "^2.3.1",
 		"electron-squirrel-startup": "^1.0.0",
 		"history": "^5.0.1",
