--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
 		"@typescript-eslint/eslint-plugin": "^4.0.1",
 		"@typescript-eslint/parser": "^4.0.1",
 		"@vercel/webpack-asset-relocator-loader": "1.7.0",
+		"copy-webpack-plugin": "^10.2.0",
 		"css-loader": "^6.0.0",
 		"electron": "14.0.1",
 		"eslint": "^7.6.0",
@@ -91,20 +92,23 @@
 		"typescript": "^4.0.2"
 	},
 	"dependencies": {
-		"@emotion/react": "^11.5.0",
-		"@emotion/styled": "^11.3.0",
+		"@emotion/react": "^11.7.0",
+		"@emotion/styled": "^11.6.0",
 		"@mui/icons-material": "^5.0.5",
-		"@mui/material": "^5.0.6",
-		"@mui/styles": "^5.0.2",
+		"@mui/material": "^5.2.0",
+		"@mui/styles": "^5.2.0",
 		"classnames": "^2.3.1",
 		"electron-squirrel-startup": "^1.0.0",
 		"history": "^5.0.1",
+		"i18next-xhr-backend": "^3.2.2",
 		"mdi-material-ui": "^6.22.1",
 		"prop-types": "^15.7.2",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-i18next": "^11.15.3",
 		"react-router": "^5.2.1",
 		"react-router-dom": "^5.3.0",
+		"tss-react": "^3.3.1",
 		"uuid": "^8.3.2"
 	}
 }
