--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
 		"esModuleInterop": true,
 		"noImplicitAny": true,
 		"sourceMap": true,
-		"baseUrl": ".",
+		"baseUrl": "./src",
+		// "baseUrl": ".",
 		"outDir": "dist",
 		"moduleResolution": "node",
 		"resolveJsonModule": true,
@@ -14,7 +15,9 @@
 			// "@Main/*": ["main/*"],
 			// "@Utils/*": ["utils/*"],
 			// "@Renderer/*": ["renderer/*"],
-			"*": ["node_modules/*"]
+			"@renderer/*": ["src/renderer/*"]
+			// "*": ["renderer/*"]
+			// "*": ["node_modules/*"]
 		},
 		"jsx": "react"
 	},
@@ -22,6 +25,6 @@
 	// "paths": {
 	// 	"Main/*": ["main/*"],
 	// 	"Utils/*": ["utils/*"],
-	// 	"Renderer/*": ["renderer/*"]
+	// 	"@renderer/*": ["renderer/*"]
 	// }
 }
